<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCompassionApp</string>
    <string name="action_settings">Settings</string>
    <string name="frontPage">Front Page</string>
    <string name="NotificationMain">View Quotes</string>
    <string name="NotificationSetting">Notification Setting</string>
    <string name="SplashTitle">Montreal City Mission</string>
    <string name="ConfirmOfNotificationSetting">Set</string>
    <string name="CancelOfNotificationSetting">Cancel</string>
    <string name="MeditationTimer">Meditation Timer</string>
    <string name="MeditationSetting">Meditation Setting</string>
	<string name="GeneralSetting">About</string>
	<string name="FAQ">FAQ</string>
	<string name="Diary">Compassion Diary</string>
	<string name="AddDiary">Add Diary</string>
	<string name="EditDiary">Edit Diary</string>
	<string name="QuoteOfTheDay">Quote of the day:</string>
	<string name="From">From:</string>
	<string name="QuotesError"> Please Contact the Admin for more details!</string>
	<string name="MeditationLength">Please select meditation length</string>
	<string name="Min">Min</string>
	<string name="Sec">Sec</string>
	<string name="ConfirmOfMeditationSetting">Confirm</string>
	<string name="CancelOfMeditationSetting">Cancel</string>
	<string name="AddNotesTitle">Title:</string>
	<string name="AddNotesButton">Add</string>
	<string name="CancelNotesButton">Cancel</string>
	<string name="startMeditationButton">Start</string>
	<string name="quoteImageButton">Dialy Quote</string>
	<string name="timerImageButton">Meditation</string>
	<string name="diaryImageButton">Diary</string>
	<string name="moreinfoImageButton">Setting and FAQ</string>

	<array name="language_option"> 
        <item>English</item> 
        <item>Français</item> 
        <item>简体中文</item> 
    </array>
</resources>