<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/white" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/titleTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical"
            android:text="@string/MeditationLength"
            android:textSize="@dimen/textSize" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="3"
        android:gravity="center_vertical|center_horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="100" >

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30" 
                android:entries="@array/duration"/>

            <TextView
                android:id="@+id/minTextview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="20"
                android:gravity="center_vertical"
                android:text="@string/Min"
                android:textSize="@dimen/textSize" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30" 
                android:entries="@array/duration"/>

            <TextView
                android:id="@+id/secTextview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="20"
                android:gravity="center_vertical"
                android:text="@string/Sec"
                android:textSize="@dimen/textSize" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/comfortable"
            android:gravity="center" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_weight="0.50"
                android:background="@drawable/comfortable"
                android:gravity="center"
                android:text="@string/ConfirmOfMeditationSetting" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:background="@drawable/comfortable"
                android:gravity="center"
                android:text="@string/CancelOfMeditationSetting" />

        </LinearLayout>

    </TableRow>

</TableLayout>