<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"
    android:weightSum="100" >

    <LinearLayout
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="10"
        android:background="@drawable/comfortable"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/AddNotesTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@drawable/white" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:background="@null"
            android:ems="12"
            android:hint="Diary Title"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="80"
            android:background="@drawable/comfortable"
            android:gravity="top"
            android:hint="Content"
            android:inputType="textMultiLine|textAutoCorrect"
            android:lineSpacingMultiplier="1"
            android:maxLines="40"
            android:orientation="vertical"
            android:scrollHorizontally="false"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="10"
        android:background="@drawable/comfortable"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="100dip"
            android:layout_height="50dip"
            android:background="@drawable/comfortable"
            android:text="@string/AddNotesButton" />

        <Button
            android:id="@+id/button2"
            android:layout_width="100dip"
            android:layout_height="50dip"
            android:background="@drawable/comfortable"
            android:text="@string/CancelNotesButton" />

    </LinearLayout>

</TableLayout>